--- a/index.html
+++ b/index.html
@@ -261,6 +261,15 @@
 
               <div class="skills__box">
                 <img
+                  src="./assets/img/bootstrap-5-1.svg"
+                  alt="image"
+                  class="skills__img"
+                />
+                <span class="skills__name">Bootstrap</span>
+              </div>
+
+              <div class="skills__box">
+                <img
                   src="./assets/img/info-github.svg"
                   alt="image"
                   class="skills__img"
