--- a/index.html
+++ b/index.html
@@ -133,6 +133,21 @@
               <i class="ri-arrow-right-line"></i>
             </a>
           </article>
+
+          <article class="work__card">
+            <a href="https://raine040.github.io/HBR-Bookstore/" target="_blank" class="work__link">
+              <h2 class="work__title">HBR Amazon Bookstore</h2>
+              <p class="work__description">Collection of crochet books on Amazon built with Bootstrap </p>
+              <img
+                src="./assets/img/CrochetBookstore.png"
+                alt="Crochet Bookstore cover image"
+                
+                class="work__img"
+              />
+              <i class="ri-arrow-right-line"></i>
+            </a>
+          </article>
+
         </div>
       </section>
 
