--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!--=============== FAVICON ===============-->
     <link
       rel="shortcut icon"
-      href="assets/img/favicon.png"
+      href="assets/favicon-16x16.png"
       type="image/x-icon"
     />
 
