--- a/index.html
+++ b/index.html
@@ -161,12 +161,12 @@
               <h3 class="info__title">Bio</h3>
               <p class="about__description">
                 I am an online crochet business owner and aspiring web
-                developer. I worked as a corporate travel consultant for ATG, BCD and
+                developer/data analyst. I worked as a corporate travel consultant for ATG, BCD and
                 Amex GBT servicing global companies and institutions like Nike
                 and World Bank for the past 10 years. The position involved
                 working with numerous software programs, handling constant
                 change in travel industry and building productive relationships
-                through the collaborative process. In January 2025 I earned the Certificate in Frontend Development taught by Meta.
+                through the collaborative process. In January 2025 I earned the Certificate in Frontend Development by Meta.
               </p>
               <a
                 href="./assets/pdf/RaineEimreResume2025.pdf"
