--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                 and World Bank for the past 10 years. The position involved
                 working with numerous software programs, handling constant
                 change in travel industry and building productive relationships
-                through the collaborative process. In January 2025 I earned the Certificate in Frontend Development by Meta.
+                through the collaborative process. For the purpose of transitioning from a career in the travel industry to tech and data analytics, I earned the certificate of Frontend Development by Meta in January 2025 and the certificate of Google Data Analytics in July 2025 .
               </p>
               <a
                 href="./assets/pdf/RaineEimreResume2025.pdf"
