--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             <div class="experience__content grid">
 
               <div class="experience__data grid">
-                <h3 class="experience__company">Front-End Development</h3>
+                <h3>Front-End Development</h3>
                 <div>
                   <h3 class="experience__profession">
                     by Meta
