--- a/index.html
+++ b/index.html
@@ -189,8 +189,17 @@
         <section>
           <div class="experience">
             <h3 class="info__title">Certificates</h3>
-
             <div class="experience__content grid">
+
+              <div class="experience__data grid">
+                <h3>Front-End Development</h3>
+                <div>
+                  <h3 class="experience__profession">
+                    by IBM
+                  </h3>
+                  <span class="experience__date">Jul 2025</span>                  
+                </div>
+              </div>
 
               <div class="experience__data grid">
                 <h3>Front-End Development</h3>
@@ -201,7 +210,6 @@
                   <span class="experience__date">Jan 2025</span>                  
                 </div>
               </div>
-
                             
             </div>
           </div>
