--- a/index.html
+++ b/index.html
@@ -161,13 +161,12 @@
               <h3 class="info__title">Bio</h3>
               <p class="about__description">
                 I am an online crochet business owner and aspiring web
-                developer/data analyst. I worked as a corporate travel consultant for ATG, BCD and
+                developer/data analyst/digital marketer. I worked as a corporate travel consultant for ATG, BCD and
                 Amex GBT servicing global companies and institutions like Nike
                 and World Bank for the past 10 years. The position involved
                 working with numerous software programs, handling constant
                 change in travel industry and building productive relationships
-                through the collaborative process. For the purpose of transitioning from a career in the travel industry to tech and data analytics, I earned the certificate of Frontend Development by Meta in January 2025 and the certificate of Google Data Analytics in July 2025 .
-              </p>
+                through the collaborative process. 
               <a
                 href="./assets/pdf/RaineEimreResume2025.pdf"
                 download=""
