--- a/index.html
+++ b/index.html
@@ -191,10 +191,10 @@
             <div class="experience__content grid">
 
               <div class="experience__data grid">
-                <h3>Front-End Development</h3>
+                <h3>Web Development Bootcamp</h3>
                 <div>
                   <h3 class="experience__profession">
-                    by IBM
+                    by Dr. Angela Yu
                   </h3>
                   <span class="experience__date">Jul 2025</span>                  
                 </div>
@@ -328,7 +328,7 @@
                   alt="image"
                   class="skills__img"
                 />
-                <span class="skills__name">Typescript</span>
+                <span class="skills__name">Big Query</span>
               </div> -->
 
               <!-- <div class="skills__box">
