--- a/index.html
+++ b/index.html
@@ -322,14 +322,14 @@
                 <span class="skills__name">GitHub</span>
               </div>
 
-              <!-- <div class="skills__box">
+              <div class="skills__box">
                 <img
                   src="./assets/img/google-bigquery-logo-1.svg"
                   alt="image"
                   class="skills__img"
                 />
                 <span class="skills__name">Big Query</span>
-              </div> -->
+              </div>
 
               <!-- <div class="skills__box">
                 <img
