--- a/index.html
+++ b/index.html
@@ -369,6 +369,15 @@
 
               <div class="skills__box">
                 <img
+                  src="./assets/img/sql-database-generic.svg"
+                  alt="image"
+                  class="skills__img"
+                />
+                <span class="skills__name">SQL</span>
+              </div>
+
+              <div class="skills__box">
+                <img
                   src="./assets/img/google-bigquery-logo-1.svg"
                   alt="image"
                   class="skills__img"
