--- a/index.html
+++ b/index.html
@@ -148,6 +148,20 @@
             </a>
           </article>
 
+          <article class="work__card">
+            <a href="https://cozythreadsstudio5.wordpress.com/" target="_blank" class="work__link">
+              <h2 class="work__title">Cozy Threads Studio</h2>
+              <p class="work__description">WordPress Site Developer Portfolio </p>
+              <img
+                src="./assets/img/CrochetBookstore.png"
+                alt="Crochet Bookstore cover image"
+                
+                class="work__img"
+              />
+              <i class="ri-arrow-right-line"></i>
+            </a>
+          </article>
+
         </div>
       </section>
 
@@ -531,3 +545,4 @@
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
