--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
               <h2 class="work__title">Cozy Threads Studio</h2>
               <p class="work__description">WordPress Site Developer Portfolio </p>
               <img
-                src="./assets/img/CrochetBookstore.png"
+                src="./assets/img/CozyThreadsStudioLogo"
                 alt="Crochet Bookstore cover image"
                 
                 class="work__img"
@@ -545,4 +545,5 @@
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
 
