--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
       <section class="work section" id="work">
         <h2 class="section__title">PROJECTS</h2>
         <div class="work__container container grid">
+          
           <article class="work__card">
             <a href="https://raine-webdev-2024.my.canva.site/cruise2025" target="_blank" class="work__link">
               <h2 class="work__title">Caribbean Cruise 2025</h2>
@@ -154,7 +155,7 @@
               <p class="work__description">WordPress Site Developer Portfolio </p>
               <img
                 src="./assets/img/CozyThreadsStudioLogo"
-                alt="Crochet Bookstore cover image"
+                alt="Cozy Threads Studio logo"
                 
                 class="work__img"
               />
@@ -545,5 +546,6 @@
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
 
 
