--- a/index.html
+++ b/index.html
@@ -175,14 +175,8 @@
             <div class="about__content">
               <h3 class="info__title">Bio</h3>
               <p class="about__description">
-                I am an online crochet business owner and aspiring web
-                developer/data analyst/digital marketer. I worked as a corporate travel consultant for ATG, BCD and
-                Amex GBT servicing global companies and institutions like Nike
-                and World Bank for the past 10 years. The position involved
-                working with numerous software programs, handling constant
-                change in travel industry and building productive relationships
-                through the collaborative process. 
-              <a
+                With over eight years of experience managing digital content and executing integrated marketing campaigns for my own brand HandmadebyRaine, I bring a strong mix of SEO expertise, website management, and conversion-focused content creation.
+              <a 
                 href="./assets/pdf/RaineEimreResume2025.pdf"
                 download=""
                 target="_blank"
@@ -204,6 +198,26 @@
           <div class="experience">
             <h3 class="info__title">Certificates</h3>
             <div class="experience__content grid">
+
+              <div class="experience__data grid">
+                <h3>Digital Marketing Associate</h3>
+                <div>
+                  <h3 class="experience__profession">
+                    by Meta
+                  </h3>
+                  <span class="experience__date">Nov 2025</span>                  
+                </div>
+              </div>
+
+              <div class="experience__data grid">
+                <h3>Data Analytics</h3>
+                <div>
+                  <h3 class="experience__profession">
+                    by Google
+                  </h3>
+                  <span class="experience__date">Sep 2025</span>                  
+                </div>
+              </div>
 
               <div class="experience__data grid">
                 <h3>Web Development Bootcamp</h3>
@@ -546,6 +560,7 @@
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
 
 
 
