--- a/index.html
+++ b/index.html
@@ -258,7 +258,8 @@
                   </h3>
                   <span class="experience__date">Aug 2017 - present</span>
                   <p class="experience__description">
-                    Creating and managing crochet blog content on WordPress. Designing crochet patterns and creating video tutorials on YouTube. Managing social media marketing to promote brand awareness. Selling digital patterns on multiple platforms, including Etsy and Shopify.
+                    Planned and executed integrated digital marketing campaigns across WordPress, YouTube, and social media, growing brand visibility and engagement. Designed marketing materials and graphics using Canva. Created engaging digital content — blog posts, video tutorials, newsletters, and ecommerce
+listings — to drive traffic and conversions. Monitored SEO, Google Analytics, and social insights to track performance and refine strategies. Built and managed online storefronts (Etsy, Shopify), leveraging SEO and targeted campaigns to increase reach.
 
                   </p>
                 </div>
@@ -272,20 +273,20 @@
                   </h3>
                   <span class="experience__date">Feb 2019 - Oct 2024</span>
                   <p class="experience__description">
-                    Made reservations for World Bank corporate travelers. Completed any service requests and sold
-                    related products such as car, air, hotel using Amadeus GDS.
+                    Produced accurate, detail-oriented work under tight deadlines, including international travel arrangements and ticketing.
+Conducted data reporting and analysis to resolve issues, improving team efficiency and client satisfaction. Collaborated across teams to implement workflow improvements and deliver detailoriented results under strict deadlines.
                   </p>
                 </div>
               </div>
 
               <div class="experience__data grid">
-                <h2 class="experience__company">ATG/BCD</h2>
+                <h2 class="experience__company">The Global Marketer Publication</h2>
                 <div>
                   <h3 class="experience__profession">
-                    Corporate Travel Consultant for Nike
+                    Awards Program Coordinator
                   </h3>
-                  <span class="experience__date">Apr 2015 - Dec 2018</span>
-                  <p class="experience__description">Arranged complex international business travel for Nike employees, including air, hotel, car rental, other ground transportation, transfers, etc in Sabre GDS. </p>
+                  <span class="experience__date">Jan 2006 - Dec 2088</span>
+                  <p class="experience__description">Maintained a marketing website for the company’s Diamond Awards program. Supported the organization and execution of the prestigious Diamonds Award Event, contributing to the seamless coordination of logistics and performance of the event.</p>
                 </div>
               </div>
             </div>
@@ -560,6 +561,7 @@
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
 
 
 
