--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             <div class="about__content">
               <h3 class="info__title">Bio</h3>
               <p class="about__description">
-                With over eight years of experience managing digital content and executing integrated marketing campaigns for my own brand HandmadebyRaine, I bring a strong mix of SEO expertise, website management, and conversion-focused content creation. My background is supported by practical business skills, including producing clear, professional communication with clients via Salesforce CRM during my time at Amex Global Business Travel, which demonstrates my ability to manage stakeholder priorities with precision and efficiency. 
+                With over eight years of experience managing digital content and executing integrated marketing campaigns for my own brand HandmadebyRaine, I bring a strong mix of SEO expertise, website management, and conversion-focused content creation. My background is supported by practical business skills, including producing clear, professional communication with clients via Salesforce CRM during my time at Amex Global Business Travel.
                 
               <a 
                 href="./assets/pdf/RaineEimreResume2025.pdf"
@@ -562,6 +562,7 @@ Conducted data reporting and analysis to resolve issues, improving team efficien
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
 
 
 
