--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
           <div class="home__data">
             <h1 class="home__name">Raine <br />Eimre</h1>
-            <h3 class="home__profession">Web Developer</h3>
+            <h3 class="home__profession">Digital Creative</h3>
           </div>
 
           <a href="#work" class="home__scroll">
@@ -562,6 +562,7 @@ Conducted data reporting and analysis to resolve issues, improving team efficien
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
 
 
 
