--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                 <h2 class="experience__company">HandmadebyRaine</h2>
                 <div>
                   <h3 class="experience__profession">
-                    Online Business Owner
+                    Online Business Owner / Manager
                   </h3>
                   <span class="experience__date">Aug 2017 - present</span>
                   <p class="experience__description">
@@ -562,6 +562,7 @@ Conducted data reporting and analysis to resolve issues, improving team efficien
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
 
 
 
