--- a/index.html
+++ b/index.html
@@ -163,6 +163,20 @@
             </a>
           </article>
 
+          <article class="work__card">
+            <a href="https://wanderingraine.com/" target="_blank" class="work__link">
+              <h2 class="work__title">Wandering Raine</h2>
+              <p class="work__description">WordPress Travel Blog</p>
+              <img
+                src="./assets/img/CozyThreadsStudioLogo"
+                alt="Wandering Raine travel blog logo"
+                
+                class="work__img"
+              />
+              <i class="ri-arrow-right-line"></i>
+            </a>
+          </article>
+
         </div>
       </section>
 
@@ -562,6 +576,7 @@ Conducted data reporting and analysis to resolve issues, improving team efficien
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
 
 
 
