--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
               <h2 class="work__title">Wandering Raine</h2>
               <p class="work__description">WordPress Travel Blog</p>
               <img
-                src="./assets/pdf/wandering-raine-logo"
+                src="assets/wandering-raine-logo.png"
                 alt="Wandering Raine travel blog logo"
                 
                 class="work__img"
@@ -576,6 +576,7 @@ Conducted data reporting and analysis to resolve issues, improving team efficien
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
 
 
 
