--- a/index.html
+++ b/index.html
@@ -215,6 +215,16 @@
             <div class="experience__content grid">
 
               <div class="experience__data grid">
+                <h3>Digital Marketing Specialist</h3>
+                <div>
+                  <h3 class="experience__profession">
+                    by Adobe
+                  </h3>
+                  <span class="experience__date">Feb 2026</span>                  
+                </div>
+              </div>
+
+              <div class="experience__data grid">
                 <h3>Digital Marketing Associate</h3>
                 <div>
                   <h3 class="experience__profession">
@@ -576,6 +586,7 @@ Conducted data reporting and analysis to resolve issues, improving team efficien
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
 
 
 
