--- a/index.html
+++ b/index.html
@@ -424,6 +424,15 @@ Conducted data reporting and analysis to resolve issues, improving team efficien
 
               <div class="skills__box">
                 <img
+                  src="./assets/img/canva-1.svg"
+                  alt="image"
+                  class="skills__img"
+                />
+                <span class="skills__name">Adobe Express</span>
+              </div>
+
+              <div class="skills__box">
+                <img
                   src="./assets/img/sql-database-generic.svg"
                   alt="image"
                   class="skills__img"
@@ -586,6 +595,7 @@ Conducted data reporting and analysis to resolve issues, improving team efficien
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
 
 
 
