--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@ Conducted data reporting and analysis to resolve issues, improving team efficien
 
               <div class="skills__box">
                 <img
-                  src="./assets/img/canva-1.svg"
+                  src="./assets/img/Adobe_Express_2026_icon.svg.png"
                   alt="image"
                   class="skills__img"
                 />
@@ -595,6 +595,7 @@ Conducted data reporting and analysis to resolve issues, improving team efficien
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
 
 
 
