--- a/index.html
+++ b/index.html
@@ -457,6 +457,16 @@ Conducted data reporting and analysis to resolve issues, improving team efficien
                 />
                 <span class="skills__name">Salesforce</span>
               </div>
+
+              <div class="skills__box">
+                <img
+                  src="./assets/img/salesforce-2.svg"
+                  alt="image"
+                  class="skills__img"
+                />
+                <span class="skills__name">HubSpot</span>
+              </div>
+              
             </div>
           </div>
         </div>
@@ -595,6 +605,7 @@ Conducted data reporting and analysis to resolve issues, improving team efficien
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
 
 
 
