--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@ Conducted data reporting and analysis to resolve issues, improving team efficien
 
               <div class="skills__box">
                 <img
-                  src="./assets/img/salesforce-2.svg"
+                  src="./assets/img/hubspot logo.png"
                   alt="image"
                   class="skills__img"
                 />
@@ -605,6 +605,7 @@ Conducted data reporting and analysis to resolve issues, improving team efficien
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
 
 
 
